// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnAppearance snapshots should render ColumnAppearance 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn SectionColumn--light SectionColumn--withBottomMargin SectionColumn--withBottomMargin--light"
    data-test-section=""
  >
    <div
      class="css-xdzdnq SectionColumnLabels SectionColumnLabels--light"
      data-test-box=""
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumnLabels__label SectionColumnLabels__label--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        Opacity
      </small>
    </div>
    <div
      class="css-4ja0ji"
      data-test-box=""
    >
      <div
        class="css-biptg5 SectionColumnContent SectionColumnContent--light SectionColumnContent--twoInputs SectionColumnContent--twoInputs--light"
        data-test-box=""
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-1jnxvbp TextField TextField--light"
          data-test-text-field="opacity"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--light TextFieldWrapper--fullWidth TextFieldWrapper--fullWidth--light TextFieldWrapper--filled TextFieldWrapper--filled--light"
            data-test-text-field-wrapper="opacity"
          >
            <div
              class="css-e5vky9 ScrubbableInput ScrubbableInput--light"
              data-test-box=""
              data-test-scrubbable-input="opacity"
            >
              <div
                class="css-1jnxvbp Icon Icon--light Icon--neutral2 Icon--neutral2--light"
                data-test-icon="opacity"
                height="12"
                name="Opacity"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input TextFieldWrapper__input--light"
              data-test-text-field-input="opacity"
              maxlength="6"
              type="text"
              value="100"
            />
            <div
              class="css-zcp5dz TextFieldPopover TextFieldPopover--light"
              data-test-box=""
            >
              <div
                class="css-1jnxvbp TextFieldPopover__icon TextFieldPopover__icon--light TextFieldWrapper__icon TextFieldWrapper__icon--light Icon Icon--light Icon--clickable Icon--clickable--light"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="css-1c8p9kb Popover Popover--light"
                data-test-box=""
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="css-1wfopar PopoverItem PopoverItem--light"
                  data-test-box=""
                  data-test-popover-item="0"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light PopoverItem__checkIcon--selected PopoverItem__checkIcon--selected--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="opacity"
                    height="12"
                    name="Opacity"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Fixed opacity (100)
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1jnxvbp TextField TextField--light"
          data-test-text-field="border-radius"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--light TextFieldWrapper--fullWidth TextFieldWrapper--fullWidth--light TextFieldWrapper--filled TextFieldWrapper--filled--light"
            data-test-text-field-wrapper="border-radius"
          >
            <div
              class="css-e5vky9 ScrubbableInput ScrubbableInput--light"
              data-test-box=""
              data-test-scrubbable-input="border-radius"
            >
              <div
                class="css-1jnxvbp Icon Icon--light Icon--neutral2 Icon--neutral2--light"
                data-test-icon="corners"
                height="12"
                name="Corners"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input TextFieldWrapper__input--light"
              data-test-text-field-input="border-radius"
              maxlength="6"
              type="text"
              value="0"
            />
            <div
              class="css-zcp5dz TextFieldPopover TextFieldPopover--light"
              data-test-box=""
            >
              <div
                class="css-1jnxvbp TextFieldPopover__icon TextFieldPopover__icon--light TextFieldWrapper__icon TextFieldWrapper__icon--light Icon Icon--light Icon--clickable Icon--clickable--light"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="css-1c8p9kb Popover Popover--light"
                data-test-box=""
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="css-1wfopar PopoverItem PopoverItem--light"
                  data-test-box=""
                  data-test-popover-item="0"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light PopoverItem__checkIcon--selected PopoverItem__checkIcon--selected--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="corners"
                    height="12"
                    name="Corners"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Fixed border radius (0)
                  </small>
                </div>
                <div
                  class="css-1wfopar PopoverItem PopoverItem--light"
                  data-test-box=""
                  data-test-popover-item="1"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="percentage"
                    height="12"
                    name="Percentage"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Percentage
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-1jnxvbp"
        data-test-box=""
      >
        <div
          class="css-c1qms7"
          data-test-box=""
        >
          <div
            class="css-1jnxvbp ButtonIcon ButtonIcon--light ButtonIcon--selected ButtonIcon--selected--light"
            data-test-button-icon="corners-mode"
            data-test-tooltip=""
          >
            <div
              class="css-1jnxvbp Icon Icon--light Icon--blue1 Icon--blue1--light"
              data-test-icon="corners"
              height="14"
              name="Corners"
              width="14"
            />
          </div>
          <div
            class="Tooltip Tooltip--light"
          >
            <div
              class="Tooltip__content Tooltip__content--light"
            >
              Individual corners
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--light Tooltip__carrot--topCenter Tooltip__carrot--topCenter--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnAppearance snapshots should render when values are mixed 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn SectionColumn--light SectionColumn--withBottomMargin SectionColumn--withBottomMargin--light"
    data-test-section=""
  >
    <div
      class="css-xdzdnq SectionColumnLabels SectionColumnLabels--light"
      data-test-box=""
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumnLabels__label SectionColumnLabels__label--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        Opacity
      </small>
    </div>
    <div
      class="css-4ja0ji"
      data-test-box=""
    >
      <div
        class="css-biptg5 SectionColumnContent SectionColumnContent--light SectionColumnContent--twoInputs SectionColumnContent--twoInputs--light"
        data-test-box=""
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-1jnxvbp TextField TextField--light"
          data-test-text-field="opacity"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--light TextFieldWrapper--fullWidth TextFieldWrapper--fullWidth--light TextFieldWrapper--filled TextFieldWrapper--filled--light"
            data-test-text-field-wrapper="opacity"
          >
            <div
              class="css-e5vky9 ScrubbableInput ScrubbableInput--light"
              data-test-box=""
              data-test-scrubbable-input="opacity"
            >
              <div
                class="css-1jnxvbp Icon Icon--light Icon--neutral2 Icon--neutral2--light"
                data-test-icon="opacity"
                height="12"
                name="Opacity"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input TextFieldWrapper__input--light"
              data-test-text-field-input="opacity"
              maxlength="6"
              type="text"
              value="Mixed"
            />
            <div
              class="css-zcp5dz TextFieldPopover TextFieldPopover--light"
              data-test-box=""
            >
              <div
                class="css-1jnxvbp TextFieldPopover__icon TextFieldPopover__icon--light TextFieldWrapper__icon TextFieldWrapper__icon--light Icon Icon--light Icon--clickable Icon--clickable--light"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="css-1c8p9kb Popover Popover--light"
                data-test-box=""
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="css-1wfopar PopoverItem PopoverItem--light"
                  data-test-box=""
                  data-test-popover-item="0"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="opacity"
                    height="12"
                    name="Opacity"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Fixed opacity (Mixed)
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1jnxvbp TextField TextField--light"
          data-test-text-field="border-radius"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--light TextFieldWrapper--chip TextFieldWrapper--chip--light TextFieldWrapper--fullWidth TextFieldWrapper--fullWidth--light TextFieldWrapper--filled TextFieldWrapper--filled--light"
            data-test-text-field-wrapper="border-radius"
          >
            <div
              class="css-e5vky9 ScrubbableInput ScrubbableInput--light ScrubbableInput--disabled ScrubbableInput--disabled--light"
              data-test-box=""
              data-test-scrubbable-input="border-radius"
            >
              <div
                class="css-1jnxvbp Icon Icon--light Icon--neutral2 Icon--neutral2--light"
                data-test-icon="corners"
                height="12"
                name="Corners"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input TextFieldWrapper__input--light"
              data-test-text-field-input="border-radius"
              maxlength="6"
              type="text"
              value="0"
            />
            <div
              class="css-zcp5dz TextFieldPopover TextFieldPopover--light"
              data-test-box=""
            >
              <div
                class="css-1jnxvbp TextFieldPopover__icon TextFieldPopover__icon--light TextFieldWrapper__icon TextFieldWrapper__icon--light Icon Icon--light Icon--clickable Icon--clickable--light"
                data-test-icon="detached"
                height="12"
                name="Detached"
                width="12"
              />
              <div
                class="css-1c8p9kb Popover Popover--light"
                data-test-box=""
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="css-1wfopar PopoverItem PopoverItem--light"
                  data-test-box=""
                  data-test-popover-item="0"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="corners"
                    height="12"
                    name="Corners"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Fixed border radius (0)
                  </small>
                </div>
                <div
                  class="css-1wfopar PopoverItem PopoverItem--light"
                  data-test-box=""
                  data-test-popover-item="1"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="percentage"
                    height="12"
                    name="Percentage"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Percentage
                  </small>
                </div>
              </div>
            </div>
            <div
              class="css-1jnxvbp Chip Chip--light TextFieldWrapper__chip TextFieldWrapper__chip--light TextFieldWrapper__chip--attachedValue TextFieldWrapper__chip--attachedValue--light TextFieldChip TextFieldChip--light"
              data-test-chip=""
            >
              Mixed
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-1jnxvbp"
        data-test-box=""
      >
        <div
          class="css-c1qms7"
          data-test-box=""
        >
          <div
            class="css-1jnxvbp ButtonIcon ButtonIcon--light ButtonIcon--selected ButtonIcon--selected--light"
            data-test-button-icon="corners-mode"
            data-test-tooltip=""
          >
            <div
              class="css-1jnxvbp Icon Icon--light Icon--blue1 Icon--blue1--light"
              data-test-icon="corners"
              height="14"
              name="Corners"
              width="14"
            />
          </div>
          <div
            class="Tooltip Tooltip--light"
          >
            <div
              class="Tooltip__content Tooltip__content--light"
            >
              Individual corners
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--light Tooltip__carrot--topCenter Tooltip__carrot--topCenter--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnAppearance snapshots should toggle border radius mode 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn SectionColumn--light SectionColumn--withBottomMargin SectionColumn--withBottomMargin--light"
    data-test-section=""
  >
    <div
      class="css-xdzdnq SectionColumnLabels SectionColumnLabels--light"
      data-test-box=""
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumnLabels__label SectionColumnLabels__label--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        Opacity
      </small>
    </div>
    <div
      class="css-4ja0ji"
      data-test-box=""
    >
      <div
        class="css-biptg5 SectionColumnContent SectionColumnContent--light SectionColumnContent--twoInputs SectionColumnContent--twoInputs--light"
        data-test-box=""
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-1jnxvbp TextField TextField--light"
          data-test-text-field="opacity"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--light TextFieldWrapper--fullWidth TextFieldWrapper--fullWidth--light TextFieldWrapper--filled TextFieldWrapper--filled--light"
            data-test-text-field-wrapper="opacity"
          >
            <div
              class="css-e5vky9 ScrubbableInput ScrubbableInput--light"
              data-test-box=""
              data-test-scrubbable-input="opacity"
            >
              <div
                class="css-1jnxvbp Icon Icon--light Icon--neutral2 Icon--neutral2--light"
                data-test-icon="opacity"
                height="12"
                name="Opacity"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input TextFieldWrapper__input--light"
              data-test-text-field-input="opacity"
              maxlength="6"
              type="text"
              value="100"
            />
            <div
              class="css-zcp5dz TextFieldPopover TextFieldPopover--light"
              data-test-box=""
            >
              <div
                class="css-1jnxvbp TextFieldPopover__icon TextFieldPopover__icon--light TextFieldWrapper__icon TextFieldWrapper__icon--light Icon Icon--light Icon--clickable Icon--clickable--light"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="css-1c8p9kb Popover Popover--light"
                data-test-box=""
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="css-1wfopar PopoverItem PopoverItem--light"
                  data-test-box=""
                  data-test-popover-item="0"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light PopoverItem__checkIcon--selected PopoverItem__checkIcon--selected--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="opacity"
                    height="12"
                    name="Opacity"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Fixed opacity (100)
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1jnxvbp TextField TextField--light"
          data-test-text-field="border-radius"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--light TextFieldWrapper--fullWidth TextFieldWrapper--fullWidth--light TextFieldWrapper--filled TextFieldWrapper--filled--light"
            data-test-text-field-wrapper="border-radius"
          >
            <div
              class="css-e5vky9 ScrubbableInput ScrubbableInput--light"
              data-test-box=""
              data-test-scrubbable-input="border-radius"
            >
              <div
                class="css-1jnxvbp Icon Icon--light Icon--neutral2 Icon--neutral2--light"
                data-test-icon="corners"
                height="12"
                name="Corners"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input TextFieldWrapper__input--light"
              data-test-text-field-input="border-radius"
              maxlength="6"
              type="text"
              value="0"
            />
            <div
              class="css-zcp5dz TextFieldPopover TextFieldPopover--light"
              data-test-box=""
            >
              <div
                class="css-1jnxvbp TextFieldPopover__icon TextFieldPopover__icon--light TextFieldWrapper__icon TextFieldWrapper__icon--light Icon Icon--light Icon--clickable Icon--clickable--light"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="css-1c8p9kb Popover Popover--light"
                data-test-box=""
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="css-1wfopar PopoverItem PopoverItem--light"
                  data-test-box=""
                  data-test-popover-item="0"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light PopoverItem__checkIcon--selected PopoverItem__checkIcon--selected--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="corners"
                    height="12"
                    name="Corners"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Fixed border radius (0)
                  </small>
                </div>
                <div
                  class="css-1wfopar PopoverItem PopoverItem--light"
                  data-test-box=""
                  data-test-popover-item="1"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="percentage"
                    height="12"
                    name="Percentage"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Percentage
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-1jnxvbp"
        data-test-box=""
      >
        <div
          class="css-c1qms7"
          data-test-box=""
        >
          <div
            class="css-1jnxvbp ButtonIcon ButtonIcon--light ButtonIcon--selected ButtonIcon--selected--light"
            data-test-button-icon="corners-mode"
            data-test-tooltip=""
          >
            <div
              class="css-1jnxvbp Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="corners"
              height="14"
              name="Corners"
              width="14"
            />
          </div>
          <div
            class="Tooltip Tooltip--light"
          >
            <div
              class="Tooltip__content Tooltip__content--light"
            >
              Individual corners
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--light Tooltip__carrot--topCenter Tooltip__carrot--topCenter--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnAppearance snapshots should toggle border radius mode to the merged 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn SectionColumn--light SectionColumn--withBottomMargin SectionColumn--withBottomMargin--light"
    data-test-section=""
  >
    <div
      class="css-xdzdnq SectionColumnLabels SectionColumnLabels--light"
      data-test-box=""
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumnLabels__label SectionColumnLabels__label--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        Opacity
      </small>
    </div>
    <div
      class="css-4ja0ji"
      data-test-box=""
    >
      <div
        class="css-biptg5 SectionColumnContent SectionColumnContent--light SectionColumnContent--twoInputs SectionColumnContent--twoInputs--light"
        data-test-box=""
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-1jnxvbp TextField TextField--light"
          data-test-text-field="opacity"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--light TextFieldWrapper--fullWidth TextFieldWrapper--fullWidth--light TextFieldWrapper--filled TextFieldWrapper--filled--light"
            data-test-text-field-wrapper="opacity"
          >
            <div
              class="css-e5vky9 ScrubbableInput ScrubbableInput--light"
              data-test-box=""
              data-test-scrubbable-input="opacity"
            >
              <div
                class="css-1jnxvbp Icon Icon--light Icon--neutral2 Icon--neutral2--light"
                data-test-icon="opacity"
                height="12"
                name="Opacity"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input TextFieldWrapper__input--light"
              data-test-text-field-input="opacity"
              maxlength="6"
              type="text"
              value="100"
            />
            <div
              class="css-zcp5dz TextFieldPopover TextFieldPopover--light"
              data-test-box=""
            >
              <div
                class="css-1jnxvbp TextFieldPopover__icon TextFieldPopover__icon--light TextFieldWrapper__icon TextFieldWrapper__icon--light Icon Icon--light Icon--clickable Icon--clickable--light"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="css-1c8p9kb Popover Popover--light"
                data-test-box=""
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="css-1wfopar PopoverItem PopoverItem--light"
                  data-test-box=""
                  data-test-popover-item="0"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light PopoverItem__checkIcon--selected PopoverItem__checkIcon--selected--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="opacity"
                    height="12"
                    name="Opacity"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Fixed opacity (100)
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1jnxvbp TextField TextField--light"
          data-test-text-field="border-radius"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--light TextFieldWrapper--fullWidth TextFieldWrapper--fullWidth--light TextFieldWrapper--filled TextFieldWrapper--filled--light"
            data-test-text-field-wrapper="border-radius"
          >
            <div
              class="css-e5vky9 ScrubbableInput ScrubbableInput--light"
              data-test-box=""
              data-test-scrubbable-input="border-radius"
            >
              <div
                class="css-1jnxvbp Icon Icon--light Icon--neutral2 Icon--neutral2--light"
                data-test-icon="corners"
                height="12"
                name="Corners"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input TextFieldWrapper__input--light"
              data-test-text-field-input="border-radius"
              maxlength="6"
              type="text"
              value="0"
            />
            <div
              class="css-zcp5dz TextFieldPopover TextFieldPopover--light"
              data-test-box=""
            >
              <div
                class="css-1jnxvbp TextFieldPopover__icon TextFieldPopover__icon--light TextFieldWrapper__icon TextFieldWrapper__icon--light Icon Icon--light Icon--clickable Icon--clickable--light"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="css-1c8p9kb Popover Popover--light"
                data-test-box=""
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="css-1wfopar PopoverItem PopoverItem--light"
                  data-test-box=""
                  data-test-popover-item="0"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light PopoverItem__checkIcon--selected PopoverItem__checkIcon--selected--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="corners"
                    height="12"
                    name="Corners"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Fixed border radius (0)
                  </small>
                </div>
                <div
                  class="css-1wfopar PopoverItem PopoverItem--light"
                  data-test-box=""
                  data-test-popover-item="1"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__checkIcon PopoverItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon PopoverItem__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                    data-test-icon="percentage"
                    height="12"
                    name="Percentage"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text PopoverItem__text--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Percentage
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-1jnxvbp"
        data-test-box=""
      >
        <div
          class="css-c1qms7"
          data-test-box=""
        >
          <div
            class="css-1jnxvbp ButtonIcon ButtonIcon--light ButtonIcon--selected ButtonIcon--selected--light"
            data-test-button-icon="corners-mode"
            data-test-tooltip=""
          >
            <div
              class="css-1jnxvbp Icon Icon--light Icon--blue1 Icon--blue1--light"
              data-test-icon="corners"
              height="14"
              name="Corners"
              width="14"
            />
          </div>
          <div
            class="Tooltip Tooltip--light"
          >
            <div
              class="Tooltip__content Tooltip__content--light"
            >
              Individual corners
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--light Tooltip__carrot--topCenter Tooltip__carrot--topCenter--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
